--- a/paper/conclusion.tex
+++ b/paper/conclusion.tex
@@ -18,7 +18,7 @@ We can extend the functionality of the Java agent in multiple ways. Its current 
 \subsection{Predictions}
 We can make four different enhancements to the predictors.\\
 
-\noindent For the first enhancement, the predictor should be able to discriminate between a unit test or an integration test. Recall that the scope of a unit test is limited to a small fraction of the application code and that its execution time is usually low. Contrarily, an integration test usually takes much longer to execute and tests multiple components of the application at once. The predictor should ideally make use of this distinction and assume that a failing unit test will almost certainly result in a failed integration test as well, and as such, prioritise unit tests over integration tests.\\
+\noindent For the first enhancement, the predictor should be able to discriminate between a unit test, an integration test or a regression test. Recall that the scope of a unit test is limited to a small fraction of the application code and that its execution time is usually low. Contrarily, an integration test and a regression test usually take much longer to execute and test multiple components of the application at once. The predictor should ideally make use of this distinction and assume that a failing unit test will almost certainly affect a regression or integration test as well. Consequently, the predictor should prioritise unit tests over other types of tests.\\
 
 \noindent Secondly, the prediction algorithms currently take into account which source code lines have either been modified or removed to identify which test cases have been affected. Likewise, a change in the code of the test case itself should also consider that test case affected, as the change might have introduced a bug as well.\\
 
