--- a/paper/references.bib
+++ b/paper/references.bib
@@ -9,6 +9,16 @@
 	keywords={IEC standards;IEEE standards;ISO standards;program testing;software engineering;systems engineering;software testing standards;internationally-agreed standard set;ISO/IEC/IEEE 29119-1 standard;ISO/IEC/IEEE 29119 standard;systems engineering;IEC standards;ISO standards;Testing;ISO;Software testing;Formal verification;Process control;29119;29119-1;software testing;Test Planning Process;Test Plan;verification and validation},
 	doi={10.1109/IEEESTD.2013.6588537},
 	month={09},}
+	
+@book{10.5555/579193,
+author = {Beck},
+title = {Test Driven Development: By Example},
+year = {2002},
+isbn = {0321146530},
+publisher = {Addison-Wesley Longman Publishing Co., Inc.},
+address = {USA}
+}
+  
 
 @article{glass2001agile,
 	title={Agile versus traditional: Make love, not war!},
@@ -214,13 +224,6 @@
 	isbn="978-1-4757-5939-6",
 	doi="10.1007/978-1-4757-5939-6_7",
 	url="https://doi.org/10.1007/978-1-4757-5939-6_7"
-}
-
-@ONLINE {jimhighsmith2001,
-	author = "Jim Highsmith",
-	title  = "History: The Agile Manifesto",
-	year   = "2001",
-	url    = "https://agilemanifesto.org/history.html"
 }
 
 @misc{beck2001agile,
