--- a/paper/software-engineering/agile-software-development/continuous-integration/jenkins.tex
+++ b/paper/software-engineering/agile-software-development/continuous-integration/jenkins.tex
@@ -1,7 +1,7 @@
 % !TeX root = ../../../thesis.tex
 
 \subsubsection{Jenkins}
-Jenkins CI\footnote{\url{https://jenkins.io/}} was started as a hobby project in 2004 by Kohsuke Kawaguchi, a former employee of Sun Microsystems. Jenkins is programmed in Java and profiles itself as ``The leading open source automation server''. It was initially named Hudson, but after Sun was acquired by Oracle, issues related to the trademark Hudson arose. In response, the developer community decided to migrate the Hudson code to a new repository and rename the project to Jenkins \cite{SmartJenkinsDefinitive}. As of today, Jenkins is still widely used for many reasons. Since it is open source and its source code is located on \github{}, it is free to use and can be self-hosted by the developers in a private environment. Furthermore, Jenkins provides an open ecosystem to support developers into writing new plugins and extending its functionality. A market research conducted by ZeroTurnaround in 2016 revealed that Jenkins is the preferred \CI{} tool by 60\% of the developers \cite{maple_2016}.
+Jenkins CI\footnote{\url{https://jenkins.io/}}, ``the leading open source automation server'', was started in 2004 by Kohsuke Kawaguchi as a hobby project. Initially launched as Hudson, the project was later renamed to Jenkins due to trademark issues \cite{SmartJenkinsDefinitive}. Jenkins is programmed in Java and is currently maintained by volunteers. As of today, Jenkins is still widely used for many reasons. Since it is open source and its source code is located on \github{}, it is free to use and can be self-hosted in a private environment. Furthermore, Jenkins provides an open ecosystem that encourages developers to create new plugins and extend its functionality. Market research conducted by ZeroTurnaround in 2016 revealed that Jenkins is the preferred CI tool by $\SI{60}{\percent}$ of the developers \cite{maple_2016}.
 
 \begin{figure}[htbp!]
 	\centering
